# print-project

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PYPI-README.md  README.md  print_project.py  print_project_bkp.py  pyproject.toml  reconstruct_project.py
archive/: README.md
config/: config.ini
docs/: CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  PYPI_PUBLISHING.md
scripts/: install.ps1  install.py  install.sh  release.sh
